# lv3proj_ng

./: .gitignore  CMakeLists.txt  LV3.sln  README.md
dep/: lua.vcproj
dep/lib/win32/: SDL2.lib  SDL2main.lib
dep/src/lua/: CMakeLists.txt
src/: CMakeLists.txt  engine.vcproj  game.vcproj  gme.vcproj  imgui.vcproj  io.vcproj  libpng.vcproj  lua.vcproj  shared.vcproj  ttvfs.vcproj  ui.vcproj  zlib.vcproj
src/engine/: Anim.h  AnimParser.cpp  AnimParser.h  AnimatedTexture.cpp  AnimatedTexture.h  Bootstrap.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Collision.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EventRecv.cpp  EventRecv.h  FileAPI.cpp  FileAPI.h  FrameTime.cpp  FrameTime.h  GLTexture.cpp  GLTexture.h  ImageResource.cpp  ImageResource.h  ImguiDriver.cpp  ImguiDriver.h  MemResource.h  MouseState.cpp  MouseState.h  ObjectMgr.cpp  ObjectMgr.h  Objects.cpp  Objects.h  ObsGrid.cpp  ObsGrid.h  ObsRender.cpp  ObsRender.h  OpenGLAPI.cpp  OpenGLAPI.h  OpenGLStubs.h  (+58 more)
src/engine/GL/: gl.h
src/engine/collision/: AABB.cpp  AABB.h  Circle.cpp  Circle.h  Collidable.h  Collision.cpp  Collision.h  Line.cpp  Line.h  PixelMap.cpp  PixelMap.h
src/engine/opengl/: TextureLoad.cpp  TileMapRender.cpp  VertexBuffer.cpp  glapi.h  glstubs.h  renderer.cpp
src/engine/unused/: Camera.h  Entity.cpp  Entity.h  ObjectMgr.cpp  ObjectMgr.h  ObsGrid.h  ObsRender.h  RenderLayer.cpp  RenderLayer.h  RenderObject_old.cpp  TileGrid.cpp  TileGrid.h
src/game/: CMakeLists.txt  GameDevUI.cpp  GameDevUI.h  LuaConstants.cpp  LuaConstants.h  LuaDefines.h  LuaEngine.cpp  LuaEngine.h  LuaInterface.cpp  LuaInterface.h  ScriptedEngine.cpp  ScriptedEngine.h  ScriptedEntity.cpp  ScriptedEntity.h  main.cpp  uitest.cpp
src/game/unused/: LuaDefines.h  LuaEngine.h  LuaInterface.h  ScriptedEngine.cpp  ScriptedEntity.cpp  ScriptedEntity.h  main.cpp
src/imgui/: CMakeLists.txt  imconfig.h  imgui.cpp
src/include/: SDLMaster.h  glmx.h
src/lib/win32/: SDL2test.lib
src/png/: CMakeLists.txt
src/shared/: Arenas.cpp  Arenas.h  Bootstrap.h  CMakeLists.txt  IntervalTimer.h  MemoryAllocatorDynamicPool.h  MemoryAllocatorMalloc.h  MemoryAllocatorSmallBlock.cpp  MemoryArena.h  MemorySystem.h  MemoryThreadPolicy.h  MemoryTrackingPolicy.h  MemoryUtil.h  MersenneTwister.h  PlatformSpecific.cpp  PlatformSpecific.h  SysDefs.h  Vector.cpp  Vector.h  algorithmx.h  array2d.h  bithacks.h  common.h  interpolator.cpp  interpolator.h  log.cpp  log.h  mathtools.h  pcg_basic.cpp  pcg_basic.h  pugiconfig.hpp  refcounted.h  tinyrng.h  tools.cpp  tools.h
src/shared/unused/: Arenas.h  ByteBuffer.h  MemoryAllocatorFixedPool.h  MemoryAllocatorNull.h  MemoryAllocatorSmallBlock.h  MemoryAllocators.h  MemoryArena.h  MemoryBoundsCheckPolicy.h  MemoryTaggingPolicy.h  MemoryTrackingPolicy.h  MemoryUtil.h  Vector_old.cpp
src/ttvfs/: VFSFile.h
src/ui/: CMakeLists.txt  Renderer2.h  imgui_impl_sdl.cpp  renderer.h  ui.cpp  ui.h  window.cpp
src/ui/opengl/: CMakeLists.txt  Renderer2.cpp  glapi.cpp  imgui_impl_opengl2.cpp  renderer.cpp
src/ui/opengl/GL/: glext.h
src/vfs/ttvfs/: VFSDefines.h
src/vfs/ttvfs_cfileapi/: ttvfs_stdio.cpp  ttvfs_stdio.h
src/zlib/: CMakeLists.txt
